project4/parser.output
Terminals which are not used

   T_EOF
   T_NEWLN


State 43 conflicts: 1 reduce/reduce


Grammar

    0 $accept: Start $end

    1 Start: Classes

    2 Classes: Classes Class
    3        | Class

    4 Class: T_ID T_LC MethodsAndMembers T_RC
    5      | T_ID T_EXTENDS T_ID T_LC MethodsAndMembers T_RC

    6 MethodsAndMembers: One_Or_More_Declarations
    7                  | One_Or_More_Methods
    8                  | One_Or_More_Declarations One_Or_More_Methods
    9                  | /* empty */

   10 One_Or_More_Methods: One_Or_More_Methods Method
   11                    | Method

   12 Type: T_INTEGER
   13     | T_BOOLEAN
   14     | T_NONE
   15     | T_ID

   16 Method: T_ID T_LP Zero_Or_More_Parameters T_RP T_FUNC Type T_LC BodyDecStat T_RC

   17 Zero_Or_More_Parameters: Zero_Or_More_Parameters Parameter
   18                        | /* empty */

   19 Parameter: T_ID T_COLON Type
   20          | T_ID T_COLON Type T_COMMA

   21 BodyDecStat: One_Or_More_Declarations ReturnStatement
   22            | One_Or_More_Statements ReturnStatement
   23            | One_Or_More_Declarations One_Or_More_Statements ReturnStatement
   24            | ReturnStatement
   25            | /* empty */

   26 One_Or_More_Declarations: One_Or_More_Declarations Declaration
   27                         | Declaration

   28 Declaration: Type IDS T_SEMICOL

   29 IDS: T_ID
   30    | IDS T_COMMA T_ID

   31 ReturnStatement: T_RETURN Expression T_SEMICOL
   32                | /* empty */

   33 One_Or_More_Statements: One_Or_More_Statements Statement
   34                       | Statement

   35 Statement: Assignment
   36          | MethodCalling
   37          | IfElse
   38          | WhileLoop
   39          | RepeatUntil
   40          | Print

   41 Assignment: T_ID T_ASSIGN Expression T_SEMICOL
   42           | T_ID T_DOT T_ID T_ASSIGN Expression T_SEMICOL

   43 MethodCalling: MethodCall T_SEMICOL

   44 IfElse: T_IF Expression T_LC Block T_RC
   45       | T_IF Expression T_LC Block T_RC T_ELSE T_LC Block T_RC

   46 WhileLoop: T_WHILE Expression T_LC Block T_RC

   47 RepeatUntil: T_REPEAT T_LC Block T_RC T_UNTIL T_LP Expression T_RP T_SEMICOL

   48 Block: One_Or_More_Statements

   49 Print: T_PRINT Expression T_SEMICOL

   50 Expression: Expression T_PLUS Expression
   51           | Expression T_MINUS Expression
   52           | Expression T_MULTIPLY Expression
   53           | Expression T_DIVIDE Expression
   54           | Expression T_LESS Expression
   55           | Expression T_LESSOREQUAL Expression
   56           | Expression T_EQUALS Expression
   57           | Expression T_AND Expression
   58           | Expression T_OR Expression
   59           | T_NOT Expression
   60           | T_MINUS Expression
   61           | MethodCall
   62           | T_ID
   63           | T_ID T_DOT T_ID
   64           | T_LP Expression T_RP
   65           | T_LITERAL
   66           | T_TRUE
   67           | T_FALSE
   68           | T_NEW T_ID
   69           | T_NEW T_ID T_LP Arguments T_RP

   70 MethodCall: T_ID T_LP Arguments T_RP
   71           | T_ID T_DOT T_ID T_LP Arguments T_RP

   72 Arguments: ArgumentsP
   73          | /* empty */

   74 ArgumentsP: Arguments T_COMMA Expression
   75           | Expression


Terminals, with rules where they appear

$end (0) 0
error (256)
T_PRINT (258) 49
T_RETURN (259) 31
T_IF (260) 44 45
T_UNARYMINUS (261)
T_ELSE (262) 45
T_WHILE (263) 46
T_NEW (264) 68 69
T_INTEGER (265) 12
T_BOOLEAN (266) 13
T_NONE (267) 14
T_EQUALS (268) 56
T_AND (269) 57
T_OR (270) 58
T_NOT (271) 59
T_TRUE (272) 66
T_FALSE (273) 67
T_EXTENDS (274) 5
T_REPEAT (275) 47
T_UNTIL (276) 47
T_EOF (277)
T_NEWLN (278)
T_LC (279) 4 5 16 44 45 46 47
T_RC (280) 4 5 16 44 45 46 47
T_LP (281) 16 47 64 69 70 71
T_RP (282) 16 47 64 69 70 71
T_PLUS (283) 50
T_MINUS (284) 51 60
T_DIVIDE (285) 53
T_MULTIPLY (286) 52
T_LESS (287) 54
T_LESSOREQUAL (288) 55
T_COMMA (289) 20 30 74
T_LITERAL (290) 65
T_DOT (291) 42 63 71
T_SEMICOL (292) 28 31 41 42 43 47 49
T_FUNC (293) 16
T_COLON (294) 19 20
T_ID (295) 4 5 15 16 19 20 29 30 41 42 62 63 68 69 70 71
T_ASSIGN (296) 41 42


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
Start (43)
    on left: 1, on right: 0
Classes (44)
    on left: 2 3, on right: 1 2
Class (45)
    on left: 4 5, on right: 2 3
MethodsAndMembers (46)
    on left: 6 7 8 9, on right: 4 5
One_Or_More_Methods (47)
    on left: 10 11, on right: 7 8 10
Type (48)
    on left: 12 13 14 15, on right: 16 19 20 28
Method (49)
    on left: 16, on right: 10 11
Zero_Or_More_Parameters (50)
    on left: 17 18, on right: 16 17
Parameter (51)
    on left: 19 20, on right: 17
BodyDecStat (52)
    on left: 21 22 23 24 25, on right: 16
One_Or_More_Declarations (53)
    on left: 26 27, on right: 6 8 21 23 26
Declaration (54)
    on left: 28, on right: 26 27
IDS (55)
    on left: 29 30, on right: 28 30
ReturnStatement (56)
    on left: 31 32, on right: 21 22 23 24
One_Or_More_Statements (57)
    on left: 33 34, on right: 22 23 33 48
Statement (58)
    on left: 35 36 37 38 39 40, on right: 33 34
Assignment (59)
    on left: 41 42, on right: 35
MethodCalling (60)
    on left: 43, on right: 36
IfElse (61)
    on left: 44 45, on right: 37
WhileLoop (62)
    on left: 46, on right: 38
RepeatUntil (63)
    on left: 47, on right: 39
Block (64)
    on left: 48, on right: 44 45 46 47
Print (65)
    on left: 49, on right: 40
Expression (66)
    on left: 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67
    68 69, on right: 31 41 42 44 45 46 47 49 50 51 52 53 54 55 56 57
    58 59 60 64 74 75
MethodCall (67)
    on left: 70 71, on right: 43 61
Arguments (68)
    on left: 72 73, on right: 69 70 71 74
ArgumentsP (69)
    on left: 74 75, on right: 72


state 0

    0 $accept: . Start $end

    T_ID  shift, and go to state 1

    Start    go to state 2
    Classes  go to state 3
    Class    go to state 4


state 1

    4 Class: T_ID . T_LC MethodsAndMembers T_RC
    5      | T_ID . T_EXTENDS T_ID T_LC MethodsAndMembers T_RC

    T_EXTENDS  shift, and go to state 5
    T_LC       shift, and go to state 6


state 2

    0 $accept: Start . $end

    $end  shift, and go to state 7


state 3

    1 Start: Classes .
    2 Classes: Classes . Class

    T_ID  shift, and go to state 1

    $default  reduce using rule 1 (Start)

    Class  go to state 8


state 4

    3 Classes: Class .

    $default  reduce using rule 3 (Classes)


state 5

    5 Class: T_ID T_EXTENDS . T_ID T_LC MethodsAndMembers T_RC

    T_ID  shift, and go to state 9


state 6

    4 Class: T_ID T_LC . MethodsAndMembers T_RC

    T_INTEGER  shift, and go to state 10
    T_BOOLEAN  shift, and go to state 11
    T_NONE     shift, and go to state 12
    T_ID       shift, and go to state 13

    $default  reduce using rule 9 (MethodsAndMembers)

    MethodsAndMembers         go to state 14
    One_Or_More_Methods       go to state 15
    Type                      go to state 16
    Method                    go to state 17
    One_Or_More_Declarations  go to state 18
    Declaration               go to state 19


state 7

    0 $accept: Start $end .

    $default  accept


state 8

    2 Classes: Classes Class .

    $default  reduce using rule 2 (Classes)


state 9

    5 Class: T_ID T_EXTENDS T_ID . T_LC MethodsAndMembers T_RC

    T_LC  shift, and go to state 20


state 10

   12 Type: T_INTEGER .

    $default  reduce using rule 12 (Type)


state 11

   13 Type: T_BOOLEAN .

    $default  reduce using rule 13 (Type)


state 12

   14 Type: T_NONE .

    $default  reduce using rule 14 (Type)


state 13

   15 Type: T_ID .
   16 Method: T_ID . T_LP Zero_Or_More_Parameters T_RP T_FUNC Type T_LC BodyDecStat T_RC

    T_LP  shift, and go to state 21

    $default  reduce using rule 15 (Type)


state 14

    4 Class: T_ID T_LC MethodsAndMembers . T_RC

    T_RC  shift, and go to state 22


state 15

    7 MethodsAndMembers: One_Or_More_Methods .
   10 One_Or_More_Methods: One_Or_More_Methods . Method

    T_ID  shift, and go to state 23

    $default  reduce using rule 7 (MethodsAndMembers)

    Method  go to state 24


state 16

   28 Declaration: Type . IDS T_SEMICOL

    T_ID  shift, and go to state 25

    IDS  go to state 26


state 17

   11 One_Or_More_Methods: Method .

    $default  reduce using rule 11 (One_Or_More_Methods)


state 18

    6 MethodsAndMembers: One_Or_More_Declarations .
    8                  | One_Or_More_Declarations . One_Or_More_Methods
   26 One_Or_More_Declarations: One_Or_More_Declarations . Declaration

    T_INTEGER  shift, and go to state 10
    T_BOOLEAN  shift, and go to state 11
    T_NONE     shift, and go to state 12
    T_ID       shift, and go to state 13

    $default  reduce using rule 6 (MethodsAndMembers)

    One_Or_More_Methods  go to state 27
    Type                 go to state 16
    Method               go to state 17
    Declaration          go to state 28


state 19

   27 One_Or_More_Declarations: Declaration .

    $default  reduce using rule 27 (One_Or_More_Declarations)


state 20

    5 Class: T_ID T_EXTENDS T_ID T_LC . MethodsAndMembers T_RC

    T_INTEGER  shift, and go to state 10
    T_BOOLEAN  shift, and go to state 11
    T_NONE     shift, and go to state 12
    T_ID       shift, and go to state 13

    $default  reduce using rule 9 (MethodsAndMembers)

    MethodsAndMembers         go to state 29
    One_Or_More_Methods       go to state 15
    Type                      go to state 16
    Method                    go to state 17
    One_Or_More_Declarations  go to state 18
    Declaration               go to state 19


state 21

   16 Method: T_ID T_LP . Zero_Or_More_Parameters T_RP T_FUNC Type T_LC BodyDecStat T_RC

    $default  reduce using rule 18 (Zero_Or_More_Parameters)

    Zero_Or_More_Parameters  go to state 30


state 22

    4 Class: T_ID T_LC MethodsAndMembers T_RC .

    $default  reduce using rule 4 (Class)


state 23

   16 Method: T_ID . T_LP Zero_Or_More_Parameters T_RP T_FUNC Type T_LC BodyDecStat T_RC

    T_LP  shift, and go to state 21


state 24

   10 One_Or_More_Methods: One_Or_More_Methods Method .

    $default  reduce using rule 10 (One_Or_More_Methods)


state 25

   29 IDS: T_ID .

    $default  reduce using rule 29 (IDS)


state 26

   28 Declaration: Type IDS . T_SEMICOL
   30 IDS: IDS . T_COMMA T_ID

    T_COMMA    shift, and go to state 31
    T_SEMICOL  shift, and go to state 32


state 27

    8 MethodsAndMembers: One_Or_More_Declarations One_Or_More_Methods .
   10 One_Or_More_Methods: One_Or_More_Methods . Method

    T_ID  shift, and go to state 23

    $default  reduce using rule 8 (MethodsAndMembers)

    Method  go to state 24


state 28

   26 One_Or_More_Declarations: One_Or_More_Declarations Declaration .

    $default  reduce using rule 26 (One_Or_More_Declarations)


state 29

    5 Class: T_ID T_EXTENDS T_ID T_LC MethodsAndMembers . T_RC

    T_RC  shift, and go to state 33


state 30

   16 Method: T_ID T_LP Zero_Or_More_Parameters . T_RP T_FUNC Type T_LC BodyDecStat T_RC
   17 Zero_Or_More_Parameters: Zero_Or_More_Parameters . Parameter

    T_RP  shift, and go to state 34
    T_ID  shift, and go to state 35

    Parameter  go to state 36


state 31

   30 IDS: IDS T_COMMA . T_ID

    T_ID  shift, and go to state 37


state 32

   28 Declaration: Type IDS T_SEMICOL .

    $default  reduce using rule 28 (Declaration)


state 33

    5 Class: T_ID T_EXTENDS T_ID T_LC MethodsAndMembers T_RC .

    $default  reduce using rule 5 (Class)


state 34

   16 Method: T_ID T_LP Zero_Or_More_Parameters T_RP . T_FUNC Type T_LC BodyDecStat T_RC

    T_FUNC  shift, and go to state 38


state 35

   19 Parameter: T_ID . T_COLON Type
   20          | T_ID . T_COLON Type T_COMMA

    T_COLON  shift, and go to state 39


state 36

   17 Zero_Or_More_Parameters: Zero_Or_More_Parameters Parameter .

    $default  reduce using rule 17 (Zero_Or_More_Parameters)


state 37

   30 IDS: IDS T_COMMA T_ID .

    $default  reduce using rule 30 (IDS)


state 38

   16 Method: T_ID T_LP Zero_Or_More_Parameters T_RP T_FUNC . Type T_LC BodyDecStat T_RC

    T_INTEGER  shift, and go to state 10
    T_BOOLEAN  shift, and go to state 11
    T_NONE     shift, and go to state 12
    T_ID       shift, and go to state 40

    Type  go to state 41


state 39

   19 Parameter: T_ID T_COLON . Type
   20          | T_ID T_COLON . Type T_COMMA

    T_INTEGER  shift, and go to state 10
    T_BOOLEAN  shift, and go to state 11
    T_NONE     shift, and go to state 12
    T_ID       shift, and go to state 40

    Type  go to state 42


state 40

   15 Type: T_ID .

    $default  reduce using rule 15 (Type)


state 41

   16 Method: T_ID T_LP Zero_Or_More_Parameters T_RP T_FUNC Type . T_LC BodyDecStat T_RC

    T_LC  shift, and go to state 43


state 42

   19 Parameter: T_ID T_COLON Type .
   20          | T_ID T_COLON Type . T_COMMA

    T_COMMA  shift, and go to state 44

    $default  reduce using rule 19 (Parameter)


state 43

   16 Method: T_ID T_LP Zero_Or_More_Parameters T_RP T_FUNC Type T_LC . BodyDecStat T_RC

    T_PRINT    shift, and go to state 45
    T_RETURN   shift, and go to state 46
    T_IF       shift, and go to state 47
    T_WHILE    shift, and go to state 48
    T_INTEGER  shift, and go to state 10
    T_BOOLEAN  shift, and go to state 11
    T_NONE     shift, and go to state 12
    T_REPEAT   shift, and go to state 49
    T_ID       shift, and go to state 50

    T_RC      reduce using rule 25 (BodyDecStat)
    T_RC      [reduce using rule 32 (ReturnStatement)]
    $default  reduce using rule 25 (BodyDecStat)

    Type                      go to state 16
    BodyDecStat               go to state 51
    One_Or_More_Declarations  go to state 52
    Declaration               go to state 19
    ReturnStatement           go to state 53
    One_Or_More_Statements    go to state 54
    Statement                 go to state 55
    Assignment                go to state 56
    MethodCalling             go to state 57
    IfElse                    go to state 58
    WhileLoop                 go to state 59
    RepeatUntil               go to state 60
    Print                     go to state 61
    MethodCall                go to state 62


state 44

   20 Parameter: T_ID T_COLON Type T_COMMA .

    $default  reduce using rule 20 (Parameter)


state 45

   49 Print: T_PRINT . Expression T_SEMICOL

    T_NEW      shift, and go to state 63
    T_NOT      shift, and go to state 64
    T_TRUE     shift, and go to state 65
    T_FALSE    shift, and go to state 66
    T_LP       shift, and go to state 67
    T_MINUS    shift, and go to state 68
    T_LITERAL  shift, and go to state 69
    T_ID       shift, and go to state 70

    Expression  go to state 71
    MethodCall  go to state 72


state 46

   31 ReturnStatement: T_RETURN . Expression T_SEMICOL

    T_NEW      shift, and go to state 63
    T_NOT      shift, and go to state 64
    T_TRUE     shift, and go to state 65
    T_FALSE    shift, and go to state 66
    T_LP       shift, and go to state 67
    T_MINUS    shift, and go to state 68
    T_LITERAL  shift, and go to state 69
    T_ID       shift, and go to state 70

    Expression  go to state 73
    MethodCall  go to state 72


state 47

   44 IfElse: T_IF . Expression T_LC Block T_RC
   45       | T_IF . Expression T_LC Block T_RC T_ELSE T_LC Block T_RC

    T_NEW      shift, and go to state 63
    T_NOT      shift, and go to state 64
    T_TRUE     shift, and go to state 65
    T_FALSE    shift, and go to state 66
    T_LP       shift, and go to state 67
    T_MINUS    shift, and go to state 68
    T_LITERAL  shift, and go to state 69
    T_ID       shift, and go to state 70

    Expression  go to state 74
    MethodCall  go to state 72


state 48

   46 WhileLoop: T_WHILE . Expression T_LC Block T_RC

    T_NEW      shift, and go to state 63
    T_NOT      shift, and go to state 64
    T_TRUE     shift, and go to state 65
    T_FALSE    shift, and go to state 66
    T_LP       shift, and go to state 67
    T_MINUS    shift, and go to state 68
    T_LITERAL  shift, and go to state 69
    T_ID       shift, and go to state 70

    Expression  go to state 75
    MethodCall  go to state 72


state 49

   47 RepeatUntil: T_REPEAT . T_LC Block T_RC T_UNTIL T_LP Expression T_RP T_SEMICOL

    T_LC  shift, and go to state 76


state 50

   15 Type: T_ID .
   41 Assignment: T_ID . T_ASSIGN Expression T_SEMICOL
   42           | T_ID . T_DOT T_ID T_ASSIGN Expression T_SEMICOL
   70 MethodCall: T_ID . T_LP Arguments T_RP
   71           | T_ID . T_DOT T_ID T_LP Arguments T_RP

    T_LP      shift, and go to state 77
    T_DOT     shift, and go to state 78
    T_ASSIGN  shift, and go to state 79

    $default  reduce using rule 15 (Type)


state 51

   16 Method: T_ID T_LP Zero_Or_More_Parameters T_RP T_FUNC Type T_LC BodyDecStat . T_RC

    T_RC  shift, and go to state 80


state 52

   21 BodyDecStat: One_Or_More_Declarations . ReturnStatement
   23            | One_Or_More_Declarations . One_Or_More_Statements ReturnStatement
   26 One_Or_More_Declarations: One_Or_More_Declarations . Declaration

    T_PRINT    shift, and go to state 45
    T_RETURN   shift, and go to state 46
    T_IF       shift, and go to state 47
    T_WHILE    shift, and go to state 48
    T_INTEGER  shift, and go to state 10
    T_BOOLEAN  shift, and go to state 11
    T_NONE     shift, and go to state 12
    T_REPEAT   shift, and go to state 49
    T_ID       shift, and go to state 50

    $default  reduce using rule 32 (ReturnStatement)

    Type                    go to state 16
    Declaration             go to state 28
    ReturnStatement         go to state 81
    One_Or_More_Statements  go to state 82
    Statement               go to state 55
    Assignment              go to state 56
    MethodCalling           go to state 57
    IfElse                  go to state 58
    WhileLoop               go to state 59
    RepeatUntil             go to state 60
    Print                   go to state 61
    MethodCall              go to state 62


state 53

   24 BodyDecStat: ReturnStatement .

    $default  reduce using rule 24 (BodyDecStat)


state 54

   22 BodyDecStat: One_Or_More_Statements . ReturnStatement
   33 One_Or_More_Statements: One_Or_More_Statements . Statement

    T_PRINT   shift, and go to state 45
    T_RETURN  shift, and go to state 46
    T_IF      shift, and go to state 47
    T_WHILE   shift, and go to state 48
    T_REPEAT  shift, and go to state 49
    T_ID      shift, and go to state 83

    $default  reduce using rule 32 (ReturnStatement)

    ReturnStatement  go to state 84
    Statement        go to state 85
    Assignment       go to state 56
    MethodCalling    go to state 57
    IfElse           go to state 58
    WhileLoop        go to state 59
    RepeatUntil      go to state 60
    Print            go to state 61
    MethodCall       go to state 62


state 55

   34 One_Or_More_Statements: Statement .

    $default  reduce using rule 34 (One_Or_More_Statements)


state 56

   35 Statement: Assignment .

    $default  reduce using rule 35 (Statement)


state 57

   36 Statement: MethodCalling .

    $default  reduce using rule 36 (Statement)


state 58

   37 Statement: IfElse .

    $default  reduce using rule 37 (Statement)


state 59

   38 Statement: WhileLoop .

    $default  reduce using rule 38 (Statement)


state 60

   39 Statement: RepeatUntil .

    $default  reduce using rule 39 (Statement)


state 61

   40 Statement: Print .

    $default  reduce using rule 40 (Statement)


state 62

   43 MethodCalling: MethodCall . T_SEMICOL

    T_SEMICOL  shift, and go to state 86


state 63

   68 Expression: T_NEW . T_ID
   69           | T_NEW . T_ID T_LP Arguments T_RP

    T_ID  shift, and go to state 87


state 64

   59 Expression: T_NOT . Expression

    T_NEW      shift, and go to state 63
    T_NOT      shift, and go to state 64
    T_TRUE     shift, and go to state 65
    T_FALSE    shift, and go to state 66
    T_LP       shift, and go to state 67
    T_MINUS    shift, and go to state 68
    T_LITERAL  shift, and go to state 69
    T_ID       shift, and go to state 70

    Expression  go to state 88
    MethodCall  go to state 72


state 65

   66 Expression: T_TRUE .

    $default  reduce using rule 66 (Expression)


state 66

   67 Expression: T_FALSE .

    $default  reduce using rule 67 (Expression)


state 67

   64 Expression: T_LP . Expression T_RP

    T_NEW      shift, and go to state 63
    T_NOT      shift, and go to state 64
    T_TRUE     shift, and go to state 65
    T_FALSE    shift, and go to state 66
    T_LP       shift, and go to state 67
    T_MINUS    shift, and go to state 68
    T_LITERAL  shift, and go to state 69
    T_ID       shift, and go to state 70

    Expression  go to state 89
    MethodCall  go to state 72


state 68

   60 Expression: T_MINUS . Expression

    T_NEW      shift, and go to state 63
    T_NOT      shift, and go to state 64
    T_TRUE     shift, and go to state 65
    T_FALSE    shift, and go to state 66
    T_LP       shift, and go to state 67
    T_MINUS    shift, and go to state 68
    T_LITERAL  shift, and go to state 69
    T_ID       shift, and go to state 70

    Expression  go to state 90
    MethodCall  go to state 72


state 69

   65 Expression: T_LITERAL .

    $default  reduce using rule 65 (Expression)


state 70

   62 Expression: T_ID .
   63           | T_ID . T_DOT T_ID
   70 MethodCall: T_ID . T_LP Arguments T_RP
   71           | T_ID . T_DOT T_ID T_LP Arguments T_RP

    T_LP   shift, and go to state 77
    T_DOT  shift, and go to state 91

    $default  reduce using rule 62 (Expression)


state 71
